--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "module": "^1.2.5",
+    "neo4j-driver": "^5.16.0",
     "nestjs-rmq": "^2.12.0",
     "pg": "^8.11.3",
     "protoscript": "^0.0.20",
